[package]
name = "firebase-verifyid"
version = "0.1.0"
authors = ["Jeff Grunewald <jeff@grunewalddesign.com>"]
edition = "2024"
description = "Dead simple verification of firebase auth id tokens"
license = "MIT or Apache-2.0"
repository = "https://github.com/jeffgrunewald/firebase-verifyid-rs"
readme = "README.md"

[dependencies]
axum = ">= 0.7, < 8"
base64 = ">= 0.22"
bs58 = "0"
futures-util = ">= 0.3"
http = "1"
http-serde = "2"
jwt-simple = ">= 0.10"
metrics = "0"
reqwest = { version = ">= 0.11", default-features = false, features = [
  "gzip",
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tower = ">= 0.4"
tracing = ">= 0.1"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
